<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:paddingHorizontal="40dp"
        android:layout_height="match_parent"
        tools:context=".RegisterActivity">

    <ImageView
            android:layout_width="215dp"
            android:layout_height="65dp"
            android:src="@drawable/hello"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:layout_gravity="center_horizontal"
    />
    <EditText android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:layout_marginTop="@dimen/input_margin"
              android:hint="@string/name"
              android:inputType="textPersonName"

    />
    <EditText
            android:id="@+id/etLastName"
            android:layout_marginTop="@dimen/input_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType ="textPersonName"
            android:hint="@string/last_name" />
    <EditText
            android:id="@+id/etEmail"
            android:layout_marginTop="@dimen/input_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType ="textEmailAddress"
            android:hint="@string/email" />
    <EditText
            android:id="@+id/etPassword"
            android:layout_marginTop="@dimen/input_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType ="textPassword"
            android:hint="@string/password" />
    <CheckBox
            android:id="@+id/cbAlgo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:textStyle="italic"
            android:layout_marginTop="@dimen/input_margin"
            android:layout_centerVertical="true"
            android:text="@string/terms" />

    <Button
            android:layout_width="219dp"
            android:layout_height="33dp"
            android:layout_marginTop="30dp"
            android:background = "@drawable/round_button"
            android:text="@string/sign_in"
            android:layout_gravity="center_horizontal"
            android:textColor = "@color/dusty_white"
            android:id="@+id/btnSignIn"

    />

</LinearLayout>