<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".MenuActivity">


    <ImageView
            android:layout_width="241dp"
            android:layout_height="wrap_content"
            android:scaleType = "centerInside"
            android:src = "@drawable/title"
            android:layout_gravity = "center_horizontal"
            android:layout_marginTop="50dp"
    />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-light"
            android:text="@string/our_menu"
            android:textAllCaps="true"
            android:layout_gravity="center_horizontal"
            android:textSize="20sp"
            android:layout_marginTop="10dp"
    />

    <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:columnCount="2"
            android:layout_marginTop="20dp"
            android:paddingHorizontal="50dp">

        <Button
                android:textColor="@color/dusty_white"
                android:text="@string/cold_drinks"
                android:background="@drawable/first_gradient"
                android:paddingHorizontal="20dp"
                android:layout_marginLeft="2dp"
                android:layout_gravity="fill_horizontal"
                android:layout_columnWeight="1"
                android:textSize="15sp"
                android:paddingVertical="15dp"
                android:id="@+id/btnColdDrinks"
        />
        <Button
                android:textColor="@color/dusty_white"
                android:text="@string/hot_drinks"
                android:background="@drawable/first_gradient"
                android:paddingHorizontal="20dp"
                android:layout_marginLeft="2dp"
                android:layout_gravity="fill_horizontal"
                android:layout_columnWeight="1"
                android:textSize="15sp"
                android:paddingVertical="15dp"
                android:id="@+id/btnHotDrinks"
        />

        <Button
                android:textColor="@color/dusty_white"
                android:text="@string/sweets"
                android:background="@drawable/second_grandient"
                android:paddingHorizontal="20dp"
                android:layout_marginLeft="2dp"
                android:layout_gravity="fill_horizontal"
                android:layout_columnWeight="1"
                android:layout_marginTop="2dp"
                android:textSize="15sp"
                android:paddingVertical="15dp"
                android:id="@+id/btnSweets"
                />
        <Button
                android:textColor="@color/dusty_white"
                android:text="@string/salties"
                android:background="@drawable/second_grandient"
                android:paddingHorizontal="20dp"
                android:layout_marginLeft="2dp"
                android:layout_gravity="fill_horizontal"
                android:layout_columnWeight="1"
                android:layout_marginTop="2dp"
                android:textSize="15sp"
                android:paddingVertical="15dp"
                android:id="@+id/btnSalties"
        />

        <Button
                android:textColor="@color/dusty_white"
                android:text="@string/combos"
                android:background="@drawable/third_gradient"
                android:paddingHorizontal="20dp"
                android:layout_marginLeft="2dp"
                android:layout_gravity="fill_horizontal"
                android:layout_columnWeight="1"
                android:layout_marginTop="2dp"
                android:textSize="15sp"
                android:paddingVertical="15dp"
                android:id="@+id/btnCombos"
        />
        <Button
                android:textColor="@color/dusty_white"
                android:text="@string/customizable"
                android:background="@drawable/third_gradient"
                android:paddingHorizontal="20dp"
                android:layout_marginLeft="2dp"
                android:layout_gravity="fill_horizontal"
                android:layout_columnWeight="1"
                android:layout_marginTop="2dp"
                android:textSize="15sp"
                android:paddingVertical="15dp"
                android:id="@+id/btnCustomized"
        />



    </GridLayout>

</LinearLayout>